--- a/dDosDefHosting.html
+++ b/dDosDefHosting.html
@@ -99,11 +99,11 @@
 											<ul>
 												<li><img src="images/server.jpg"></li>
 												<li class="hostingtext01">CPU : Xeon E5-2697 (12Core)</li>
-												<li class="hostingtext01">RAM : Server Memory 32 GB</li>
+												<li class="hostingtext01">RAM : Server Memory 16 GB</li>
 												<li class="hostingtext01">SSD : NVME SSD</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
-												<li class="hostingtext01">DDOS : 155Tbps 보안</li>
+												<li class="hostingtext01">DDOS : AnyCast 197Tbps 보안</li>
 												<li class="hostingtext01">Cloudflare : 회선 무료 제공</li>
 												<li class="hostingtext02">290,000 원/월</li>
 												<li class="hostingtext03">계약기간에 따라 할인가 적용</li>
@@ -115,11 +115,11 @@
 											<ul>
 												<li><img src="images/server.jpg"></li>
 												<li class="hostingtext01">CPU : Xeon E5-2697 (12Core)</li>
-												<li class="hostingtext01">RAM : Server Memory 64 GB</li>
+												<li class="hostingtext01">RAM : Server Memory 32 GB</li>
 												<li class="hostingtext01">SSD : NVME SSD</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
-												<li class="hostingtext01">DDOS : 155Tbps 보안</li>
+												<li class="hostingtext01">DDOS : AnyCast 197Tbps 보안</li>
 												<li class="hostingtext01">Cloudflare : 회선 무료 제공</li>
 												<li class="hostingtext02">390,000 원/월</li>
 												<li class="hostingtext03">계약기간에 따라 할인가 적용 </li>
@@ -135,7 +135,7 @@
 												<li class="hostingtext01">SSD : NVME SSD 2TB</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
-												<li class="hostingtext01">DDOS : 155Tbps 보안</li>
+												<li class="hostingtext01">DDOS : AnyCast 197Tbps 보안</li>
 												<li class="hostingtext01">Cloudflare : 회선 무료 제공</li>
 												<li class="hostingtext02">790,000 원/월</li>
 												<li class="hostingtext03">계약기간에 따라 할인가 적용</li>
