--- a/dDosDefHosting.html
+++ b/dDosDefHosting.html
@@ -98,8 +98,8 @@
 											<h4 class="hostingtext00">BASIC</h4>
 											<ul>
 												<li><img src="images/server.jpg"></li>
-												<li class="hostingtext01">CPU : Xeon E5-2697 (12Core)</li>
-												<li class="hostingtext01">RAM : Server Memory 16 GB</li>
+												<li class="hostingtext01">CPU : Xeon (12Core)</li>
+												<li class="hostingtext01">RAM : Server Memory 32 GB</li>
 												<li class="hostingtext01">SSD : NVME SSD</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
@@ -114,8 +114,8 @@
 											<h4 class="hostingtext00">STANDARD</h4>
 											<ul>
 												<li><img src="images/server.jpg"></li>
-												<li class="hostingtext01">CPU : Xeon E5-2697 (12Core)</li>
-												<li class="hostingtext01">RAM : Server Memory 32 GB</li>
+												<li class="hostingtext01">CPU : Xeon (12Core)</li>
+												<li class="hostingtext01">RAM : Server Memory 64 GB</li>
 												<li class="hostingtext01">SSD : NVME SSD</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
@@ -130,14 +130,14 @@
 											<h4 class="hostingtext00">PROFESSIONAL</h4>
 											<ul>
 												<li><img src="images/server.jpg"></li>
-												<li class="hostingtext01" style="white-space:nowrap;">CPU : Xeon E5-2697 V4 *2 (40Core)</li>
+												<li class="hostingtext01" style="white-space:nowrap;">CPU : Xeon (40Core)</li>
 												<li class="hostingtext01">RAM : Server Memory 256 GB</li>
 												<li class="hostingtext01">SSD : NVME SSD 2TB</li>
 												<li class="hostingtext01">Traffic : Auto QoS</li>
 												<li class="hostingtext01">IP : 공인아이피 1 개</li>
 												<li class="hostingtext01">DDOS : AnyCast 197Tbps 보안</li>
 												<li class="hostingtext01">Cloudflare : 회선 무료 제공</li>
-												<li class="hostingtext02">790,000 원/월</li>
+												<li class="hostingtext02">590,000 원/월</li>
 												<li class="hostingtext03">계약기간에 따라 할인가 적용</li>
 												<li><a href="https://t.me/hostNP"  target="_new" class="bnt01 btn ">문의하기</a></li>
 											</ul>
